# iso_currency

./: Cargo.toml  LICENSE  README.md  build.rs  isodata.tsv
.github/: automerge.yml  dependabot.yml  labels.yml
.github/workflows/: build.yml  publish.yml  sync-labels.yml
benches/: parse.rs
src/: lib.rs
