[package]
name = "iso_currency"
description = "ISO 4217 currency codes"
version = "0.3.0"
authors = ["Rostislav Raykov <z@zbrox.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zbrox/iso_currency"
documentation = "https://docs.rs/iso_currency/0.3.0/"
homepage = "https://github.com/zbrox/iso_currency"
readme = "README.md"
keywords = ["currency", "iso", "iso-4217", "iso4217"]

[features]
default = []
with-serde = ["serde"]

[dependencies]
iso_country = "0.1.4"
serde = { version = "1.0.107", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.52"
