[package]
name = "iso_currency"
description = "ISO 4217 currency codes"
version = "0.5.1"
authors = ["Rostislav Raykov <z@zbrox.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zbrox/iso_currency"
documentation = "https://docs.rs/iso_currency/"
homepage = "https://github.com/zbrox/iso_currency"
readme = "README.md"
keywords = ["currency", "iso", "iso-4217", "iso4217"]

[dependencies]
iso_country = "0.1.4"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.127", optional = true, features = ["derive"] }
strum = { version = "0.26.1", optional = true, features = ["derive"] }
sqlx = { version = ">0.7", optional = true }

[dev-dependencies]
divan = "0.1.11"
serde_json = "1.0.66"

[build-dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.100"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "parse"
harness = false

[features]
with-serde = ["dep:serde"]
iterator = ["dep:strum"]
with-schemars = ["dep:schemars", "with-serde"]
with-sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]
with-sqlx-postgres = ["dep:sqlx", "sqlx/postgres"]
with-sqlx-mysql = ["dep:sqlx", "sqlx/mysql"]
default = [
  "aed",
  "afn",
  "all",
  "amd",
  "ang",
  "aoa",
  "ars",
  "aud",
  "awg",
  "azn",
  "bam",
  "bbd",
  "bdt",
  "bgn",
  "bhd",
  "bif",
  "bmd",
  "bnd",
  "bob",
  "bov",
  "brl",
  "bsd",
  "btn",
  "bwp",
  "byn",
  "bzd",
  "cad",
  "cdf",
  "che",
  "chf",
  "chw",
  "clf",
  "clp",
  "cny",
  "cop",
  "cou",
  "crc",
  "cuc",
  "cup",
  "cve",
  "czk",
  "djf",
  "dkk",
  "dop",
  "dzd",
  "egp",
  "ern",
  "etb",
  "eur",
  "fjd",
  "fkp",
  "gbp",
  "gel",
  "ghs",
  "gip",
  "gmd",
  "gnf",
  "gtq",
  "gyd",
  "hkd",
  "hnl",
  "hrk",
  "htg",
  "huf",
  "idr",
  "ils",
  "inr",
  "iqd",
  "irr",
  "isk",
  "jmd",
  "jod",
  "jpy",
  "kes",
  "kgs",
  "khr",
  "kmf",
  "kpw",
  "krw",
  "kwd",
  "kyd",
  "kzt",
  "lak",
  "lbp",
  "lkr",
  "lrd",
  "lsl",
  "lyd",
  "mad",
  "mdl",
  "mga",
  "mkd",
  "mmk",
  "mnt",
  "mop",
  "mru",
  "mur",
  "mvr",
  "mwk",
  "mxn",
  "mxv",
  "myr",
  "mzn",
  "nad",
  "ngn",
  "nio",
  "nok",
  "npr",
  "nzd",
  "omr",
  "pab",
  "pen",
  "pgk",
  "php",
  "pkr",
  "pln",
  "pyg",
  "qar",
  "ron",
  "rsd",
  "rub",
  "rwf",
  "sar",
  "sbd",
  "scr",
  "sdg",
  "sek",
  "sgd",
  "shp",
  "sle",
  "sll",
  "sos",
  "srd",
  "ssp",
  "stn",
  "svc",
  "syp",
  "szl",
  "thb",
  "tjs",
  "tmt",
  "tnd",
  "top",
  "try",
  "ttd",
  "twd",
  "tzs",
  "uah",
  "ugx",
  "usd",
  "usn",
  "uyi",
  "uyu",
  "uyw",
  "uzs",
  "ved",
  "ves",
  "vnd",
  "vuv",
  "wst",
  "xaf",
  "xag",
  "xau",
  "xba",
  "xbb",
  "xbc",
  "xbd",
  "xcd",
  "xdr",
  "xof",
  "xpd",
  "xpf",
  "xpt",
  "xsu",
  "xts",
  "xua",
  "xxx",
  "yer",
  "zar",
  "zmw",
  "zwl",
  "zwg",
]
aed = []
afn = []
all = []
amd = []
ang = []
aoa = []
ars = []
aud = []
awg = []
azn = []
bam = []
bbd = []
bdt = []
bgn = []
bhd = []
bif = []
bmd = []
bnd = []
bob = []
bov = []
brl = []
bsd = []
btn = []
bwp = []
byn = []
bzd = []
cad = []
cdf = []
che = []
chf = []
chw = []
clf = []
clp = []
cny = []
cop = []
cou = []
crc = []
cuc = []
cup = []
cve = []
czk = []
djf = []
dkk = []
dop = []
dzd = []
egp = []
ern = []
etb = []
eur = []
fjd = []
fkp = []
gbp = []
gel = []
ghs = []
gip = []
gmd = []
gnf = []
gtq = []
gyd = []
hkd = []
hnl = []
hrk = []
htg = []
huf = []
idr = []
ils = []
inr = []
iqd = []
irr = []
isk = []
jmd = []
jod = []
jpy = []
kes = []
kgs = []
khr = []
kmf = []
kpw = []
krw = []
kwd = []
kyd = []
kzt = []
lak = []
lbp = []
lkr = []
lrd = []
lsl = []
lyd = []
mad = []
mdl = []
mga = []
mkd = []
mmk = []
mnt = []
mop = []
mru = []
mur = []
mvr = []
mwk = []
mxn = []
mxv = []
myr = []
mzn = []
nad = []
ngn = []
nio = []
nok = []
npr = []
nzd = []
omr = []
pab = []
pen = []
pgk = []
php = []
pkr = []
pln = []
pyg = []
qar = []
ron = []
rsd = []
rub = []
rwf = []
sar = []
sbd = []
scr = []
sdg = []
sek = []
sgd = []
shp = []
sle = []
sll = []
sos = []
srd = []
ssp = []
stn = []
svc = []
syp = []
szl = []
thb = []
tjs = []
tmt = []
tnd = []
top = []
try = []
ttd = []
twd = []
tzs = []
uah = []
ugx = []
usd = []
usn = []
uyi = []
uyu = []
uyw = []
uzs = []
ved = []
ves = []
vnd = []
vuv = []
wst = []
xaf = []
xag = []
xau = []
xba = []
xbb = []
xbc = []
xbd = []
xcd = []
xdr = []
xof = []
xpd = []
xpf = []
xpt = []
xsu = []
xts = []
xua = []
xxx = []
yer = []
zar = []
zmw = []
zwl = []
zwg = []
