[package]
name = "iso_currency"
description = "ISO 4217 currency codes"
version = "0.5.3"
authors = ["Rostislav Raykov <z@zbrox.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zbrox/iso_currency"
documentation = "https://docs.rs/iso_currency/"
homepage = "https://github.com/zbrox/iso_currency"
readme = "README.md"
keywords = ["currency", "iso", "iso-4217", "iso4217"]

[features]
default = []
with-serde = ["dep:serde"]
iterator = ["dep:strum"]
with-schemars = ["dep:schemars", "with-serde"]
with-sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]
with-sqlx-postgres = ["dep:sqlx", "sqlx/postgres"]
with-sqlx-mysql = ["dep:sqlx", "sqlx/mysql"]

[dependencies]
iso_country = "0.1.4"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.127", optional = true, features = ["derive"] }
strum = { version = "0.27.1", optional = true, features = ["derive"] }
sqlx = { version = ">0.7", optional = true }

[dev-dependencies]
divan = "0.1.11"
serde_json = "1.0.66"

[build-dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "parse"
harness = false
